testsuite/tests/interpreter_errors/call_selector_no_args/test.out
script.lkql:2:7: error: Selector call should have a node argument
  2 | print(children())
    |       ^^^^^^^^^^
